--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,5 @@
   <app-user-input
     (calculate)="calculateInvestmentResults($event)"
   ></app-user-input>
-  <app-investment-results [results]="resultData" />
+  <app-investment-results [results]="resultData()" />
 </main>
