--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <app-header class="center"> </app-header>
 <main>
-  <app-user-input
-    (calculate)="calculateInvestmentResults($event)"
-  ></app-user-input>
-  <app-investment-results [results]="resultData()" />
+  <app-user-input />
+  <app-investment-results />
 </main>
